fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 header {
   background-color: #1f2937;
   color: #e5e7eb;
-  height: 30vh;
+  height: 25vh;
   padding: 0 24vh;
   display: flex;
   flex-direction: column;
@@ -79,7 +79,8 @@ button {
 /* hero styling end */
 /* section 2 styling start */
 .section2 {
-  height: 29vh;
+  /* height: 30vh; */
+  margin-bottom: 12px;
 }
 
 h2 {
@@ -107,14 +108,14 @@ h2 {
 /* section 2 styling end */
 /* section 3 styling start */
 .section3 {
-  height: 18vh;
+  /* height: 18vh; */
   background-color: #e5e7eb;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  /* I don't think padding is correct because when minimized text spills */
+  margin-bottom: 18px;
 }
 
 blockquote {
@@ -128,17 +129,17 @@ blockquote {
   font-size: 24px;
   font-weight: 900;
   color: #1f2937;
-  align-self: flex-end;
-
+  /* align-self: flex-end; */
   width: 50%;
 }
 /* section 3 styling end */
 /* section 4 styling start */
 .section4 {
-  height: 20vh;
+  /* height: 15vh; */
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 18px;
 }
 
 .section4-container {
@@ -177,7 +178,7 @@ blockquote {
 /* Section 4 styling end */
 /* Footer styling start*/
 footer {
-  height: 3vh;
+  height: 4vh;
   font-size: 16px;
   color: #e5e7eb;
   background-color: #1f2937;
